force-app/main/default/objects/Reimbursement__c/Reimbursement__c.object-meta.xml
<CustomObject>
    <description>Expense or stipend related to an assignment or program event.</description>
    <label>Reimbursement</label>
    <nameField>
        <displayFormat>RE{00000000}</displayFormat>
        <label>Reimbursement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>