force-app/main/default/objects/Reimbursement__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Captures the CFS Class associated with a reimbursement request.</description>
    <inlineHelpText>Enter the name of the class to which this reimbursement request relates.</inlineHelpText>
    <label>Course Name</label>
    <referenceTo>lmsilt__Class__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>