force-app/main/default/objects/Reimbursement__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <description>Course ID number from Class object/record.</description>
    <inlineHelpText>Course ID number.</inlineHelpText>
    <label>Course ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>