force-app/main/default/objects/Reimbursement__c/fields/Department_Code_Override__c.field-meta.xml
<CustomField>
    <fullName>Department_Code_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Code Override</label>
    <referenceTo>Department_Code__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>