force-app/main/default/objects/Reimbursement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the reimbursement request.</description>
    <inlineHelpText>If necessary, provide additional details about the reimbursement request you are submitting.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>