force-app/main/default/objects/Reimbursement__c/fields/Donated_Funds__c.field-meta.xml
<CustomField>
    <fullName>Donated_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regional Funds</label>
    <type>Checkbox</type>
</CustomField>