force-app/main/default/objects/Reimbursement__c/fields/Exceeds_SS_Cap__c.field-meta.xml
<CustomField>
    <fullName>Exceeds_SS_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exceeds SS Cap</label>
    <type>Checkbox</type>
</CustomField>