force-app/main/default/objects/Reimbursement__c/fields/Funding_Code__c.field-meta.xml
<CustomField>
    <fullName>Funding_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Funding Code object to relate a reimbursement to a particular funding code.</description>
    <inlineHelpText>Search for and select the funding code to which this reimbursement should be applied.</inlineHelpText>
    <label>Funding Code</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR (3 AND (1 OR 8)) OR (4 AND 5 AND 1) OR (6 AND 7 AND 1)</booleanFilter>
        <filterItems>
            <field>Funding_Code__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>contains</operation>
            <valueField>Funding_Code__c.Program__r.Name</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>contains</operation>
            <value>System</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Prospect - LMS Participant</value>
        </filterItems>
        <filterItems>
            <field>Funding_Code__c.Program__r.Name</field>
            <operation>contains</operation>
            <value>Driver Safety</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>contains</operation>
            <value>Chapters</value>
        </filterItems>
        <filterItems>
            <field>Funding_Code__c.Program__r.Name</field>
            <operation>equals</operation>
            <value>States</value>
        </filterItems>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>equals</operation>
            <value>Scheduled for Payment, Pending Finance Approval</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Funding_Code__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>