force-app/main/default/objects/Reimbursement__c/fields/Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count__c</fullName>
    <description>Captures the number of line items that lookup to a particular reimbursement. This is a hidden field.</description>
    <label>Line Item Count</label>
    <summaryForeignKey>Reimbursement_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>