force-app/main/default/objects/Reimbursement__c/fields/Mass_Approval_Error__c.field-meta.xml
<CustomField>
    <fullName>Mass_Approval_Error__c</fullName>
    <description>If an error occurs during a mass approval, it is stored here for the page to display.</description>
    <label>Mass Approval Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>