force-app/main/default/objects/Reimbursement__c/fields/Origin_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Code__c</fullName>
    <description>Captures the Origin Code used by PeopleSoft for reimbursment processing. This field is automatically populated through workflow.</description>
    <label>Origin Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>