force-app/main/default/objects/Reimbursement__c/fields/PortalLink__c.field-meta.xml
<CustomField>
    <fullName>PortalLink__c</fullName>
    <formula>&quot;https://aarpvolunteer.force.com/vtm/&quot; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PortalLink</label>
    <type>Text</type>
</CustomField>