force-app/main/default/objects/Reimbursement__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Captures the position to which this reimbursement is associated (through assignment).</description>
    <formula>Assignment__r.Position__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>