force-app/main/default/objects/Reimbursement__c/fields/Pre_Approval_Minus_Reimbursement_Total__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Minus_Reimbursement_Total__c</fullName>
    <formula>IF(ISBLANK(Expense_Pre_Approval__c), null, Expense_Pre_Approval__r.Reimbursement_Total__c - Reimbursement_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Approval Minus Reimbursement Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>