force-app/main/default/objects/Reimbursement__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Program related to this reimbursement.</description>
    <formula>Assignment__r.Position__r.Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of volunteer program related to this assignment and reimbursement.</inlineHelpText>
    <label>Program</label>
    <type>Text</type>
</CustomField>