force-app/main/default/objects/Reimbursement__c/fields/Program_Event__c.field-meta.xml
<CustomField>
    <fullName>Program_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is lookup field to the Program Event object.</description>
    <inlineHelpText>In this field, search for and select the Program Event that is associated with this expense request.</inlineHelpText>
    <label>Program Event</label>
    <referenceTo>Program_Event__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>