force-app/main/default/objects/Reimbursement__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Field used only by sys admin for apex classes and sharing rule</description>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>