force-app/main/default/objects/Reimbursement__c/fields/Record_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Text__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type (Text)</label>
    <type>Text</type>
</CustomField>