force-app/main/default/objects/Reimbursement__c/fields/Reimbursement_Total__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Total__c</fullName>
    <description>Captures the total amount of all reimbursement line items within a reimbursement.</description>
    <inlineHelpText>This is the total reimbursement amount based on the reimbursement line items that have been added. This field will automatically populate.</inlineHelpText>
    <label>Reimbursement Amount</label>
    <summarizedField>Reimbursement_Item__c.Line_Item_Amount__c</summarizedField>
    <summaryForeignKey>Reimbursement_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>