force-app/main/default/objects/Reimbursement__c/fields/Reimbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Type__c</fullName>
    <description>Captures the reimbursement type: Itemized or Flat Rate.</description>
    <inlineHelpText>Is this an itemized or a flat rate reimbursement?</inlineHelpText>
    <label>Reimbursement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Itemized</fullName>
                <default>true</default>
                <label>Itemized</label>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>