force-app/main/default/objects/Reimbursement__c/fields/Split_State_Program__c.field-meta.xml
<CustomField>
    <fullName>Split_State_Program__c</fullName>
    <formula>IF(Assignment__r.Position__r.Program__r.Split_State_Level_Program__c, 
  Assignment__r.Position__r.Program__c,
  IF(Assignment__r.Position__r.Program__r.Parent_Program__r.Split_State_Level_Program__c, 
    Assignment__r.Position__r.Program__r.Parent_Program__c,
    IF(Assignment__r.Position__r.Program__r.Parent_Program__r.Parent_Program__r.Split_State_Level_Program__c,
      Assignment__r.Position__r.Program__r.Parent_Program__r.Parent_Program__c, 
      IF(Assignment__r.Position__r.Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__r.Split_State_Level_Program__c,
        Assignment__r.Position__r.Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__c,
        IF(Assignment__r.Position__r.Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__r.Split_State_Level_Program__c,
          Assignment__r.Position__r.Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__r.Parent_Program__c,
        &#39;&#39;)
      )
    )
  )
)</formula>
    <label>Split State Program</label>
    <type>Text</type>
</CustomField>