force-app/main/default/objects/Reimbursement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Captures status of a reimbursement request.</description>
    <inlineHelpText>Current status of this reimbursement or pre-approval request.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by Program</fullName>
            </value>
            <value>
                <fullName>Further Action Required</fullName>
            </value>
            <value>
                <fullName>Scheduled for Payment</fullName>
            </value>
            <value>
                <fullName>Pending Finance Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>