force-app/main/default/objects/Reimbursement__c/fields/Submit_Time__c.field-meta.xml
<CustomField>
    <fullName>Submit_Time__c</fullName>
    <label>Submit Time</label>
    <type>DateTime</type>
</CustomField>