force-app/main/default/objects/Reimbursement__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>The date the Reimbursement record&#39;s Status was changed to Submitted</description>
    <inlineHelpText>The date the Reimbursement record&#39;s Status was changed to Submitted</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>