force-app/main/default/objects/Reimbursement__c/fields/Verification_Statement__c.field-meta.xml
<CustomField>
    <fullName>Verification_Statement__c</fullName>
    <description>Acknowledgement of AARP reimbursement policies and process.</description>
    <inlineHelpText>I certify amounts in this request represent necessary expenses incurred on behalf of AARP with receipts and approvals attached as required, and that no credit card numbers are visible on any attached receipts (a &quot;Yes&quot; response is required to submit).</inlineHelpText>
    <label>Verification Statement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>