force-app/main/default/objects/Reimbursement__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <description>Volunteer requesting the reimbursement.</description>
    <formula>Assignment__r.Contact__r.FirstName + &quot; &quot; +  Assignment__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Volunteer requesting the reimbursement.</inlineHelpText>
    <label>Volunteer</label>
    <type>Text</type>
</CustomField>