force-app/main/default/objects/Reimbursement__c/fields/Volunteer_Email__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Email__c</fullName>
    <label>Volunteer Email</label>
    <type>Email</type>
</CustomField>