force-app/main/default/objects/Reimbursement__c/fields/Volunteer_Event__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Event</label>
    <referenceTo>Volunteer_Event__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>