force-app/main/default/objects/Reimbursement__c/fields/Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_ID__c</fullName>
    <formula>Assignment__r.Contact__r.Volunteer_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer ID</label>
    <type>Text</type>
</CustomField>