force-app/main/default/objects/Reimbursement__c/recordTypes/Expense_Pre_Approval.recordType-meta.xml
<RecordType>
    <fullName>Expense_Pre_Approval</fullName>
    <active>true</active>
    <description>Estimated expenses which require pre-approval in order to submit actual expense reimbursement.</description>
    <label>Expense Pre-Approval</label>
</RecordType>