force-app/main/default/objects/Reimbursement__c/recordTypes/Expense_Reimbursement.recordType-meta.xml
<RecordType>
    <fullName>Expense_Reimbursement</fullName>
    <active>true</active>
    <description>Actual expense request submitted in order to receive reimbursement payment.</description>
    <label>Expense Reimbursement</label>
</RecordType>