force-app/main/default/objects/Reimbursement__c/validationRules/ADS_Threshold_Reimbursement_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>ADS_Threshold_Reimbursement_Requirement</fullName>
    <active>false</active>
    <description>Driver Safety reimbursement requests over $75 require expense pre-approval.</description>
    <errorConditionFormula>AND( Reimbursement_Total__c &gt; 75,
    CONTAINS(RecordType.Name, &#39;Expense Reimbursement&#39;),
 CONTAINS(Assignment__r.Position__r.Program__r.Branding_Descriptor__c ,&quot;Driver Safety&quot;),
   ISBLANK(Expense_Pre_Approval__c),
  NOT(CONTAINS(Assignment__r.Position__r.Name, &quot;State Coordinator&quot;)),
 NOT(CONTAINS(Assignment__r.Position__r.Name, &quot;National Coordinator&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>Expense_Pre_Approval__c</errorDisplayField>
    <errorMessage>Expense pre-approval is required for Driver Safety reimbursement requests over $75.  Please submit expense pre-approval request first and once it&#39;s approved, enter that reimbursement ID into expense pre-approval field when submitting your reimbursement.</errorMessage>
</ValidationRule>