force-app/main/default/objects/Reimbursement__c/validationRules/Limit_Flat_Rate_to_One_Line_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Flat_Rate_to_One_Line_Item</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Reimbursement_Type__c, &quot;Flat Rate&quot;),
 RecordType.Name = &quot;Expense Reimbursement&quot;,
   Line_Item_Count__c &gt; 1
)</errorConditionFormula>
    <errorMessage>If reimbursement type is flat rate, there should only be one reimbursement line item associated with this reimbursement.</errorMessage>
</ValidationRule>