force-app/main/default/objects/Reimbursement__c/validationRules/Origin_Code_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Origin_Code_Required</fullName>
    <active>true</active>
    <description>Origin Code is required when the status is Approved by Program</description>
    <errorConditionFormula>AND(
 ISBLANK( Origin_Code__c ),  ISPICKVAL( Status__c , &quot;Approved By Program&quot;)   

)</errorConditionFormula>
    <errorMessage>There was a problem approving your reimbursement please contact your supervisor or system administrator</errorMessage>
</ValidationRule>