force-app/main/default/objects/Reimbursement__c/validationRules/Require_Course_ID_for_ADS_Flat_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Course_ID_for_ADS_Flat_Rate</fullName>
    <active>false</active>
    <description>Requires a course ID if the flat rate is related to an ADS assignment.</description>
    <errorConditionFormula>AND(
 Assignment__r.Position__r.Program__r.Branding_Descriptor__c = &quot;Driver Safety&quot;,
 ISBLANK( Class__c ),
 ISPICKVAL( Reimbursement_Type__c , &quot;Flat Rate&quot;),
 ISPICKVAL( Status__c,&quot;Submitted&quot;), 
 RecordType.Name = &quot;Expense Reimbursement&quot;
)</errorConditionFormula>
    <errorMessage>In order to save a flat rate request for Driver Safety, you must search for and select a course in the Course Name field.</errorMessage>
</ValidationRule>