force-app/main/default/objects/Reimbursement__c/validationRules/Require_Funding_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Funding_Code</fullName>
    <active>false</active>
    <description>Requires a funding code before a record can be saved. Currently, this is only enforcing this rule for Driver Safety (DS).</description>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Expense Reimbursement&quot;,
    NOT(ISNEW()),
    ISBLANK( Funding_Code__c ),
      OR(Assignment__r.Position__r.Program__r.Branding_Descriptor__c = &quot;Driver Safety&quot;,Assignment__r.Position__r.Program__r.Branding_Descriptor__c = &quot;Tax-Aide&quot;
  )
)</errorConditionFormula>
    <errorDisplayField>Funding_Code__c</errorDisplayField>
    <errorMessage>In order to save this reimbursement, you must search for and select a funding code.</errorMessage>
</ValidationRule>