force-app/main/default/objects/Reimbursement__c/validationRules/Require_Verification_Statement_of_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Verification_Statement_of_Yes</fullName>
    <active>false</active>
    <description>In order to save a reimbursement, user must select Yes for the verification statement field. This is to ensure it does not get submitted with No as the value.</description>
    <errorConditionFormula>AND(
RecordType.Name = &#39;Expense Reimbursement&#39;,
 ISPICKVAL(Verification_Statement__c, &#39;No&#39;)
)</errorConditionFormula>
    <errorDisplayField>Verification_Statement__c</errorDisplayField>
    <errorMessage>In order to save and submit a reimbursement, you must select yes in the Verification Statement field (roll over the help icon to the left of the Verification Statement field to review what you are certifying).</errorMessage>
</ValidationRule>