force-app/main/default/objects/Reimbursement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>Program__c</columns>
    <columns>Position__c</columns>
    <columns>Assignment__c</columns>
    <columns>Record_Type_Text__c</columns>
    <columns>Reimbursement_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Reimbursement_Total__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>