force-app/main/default/objects/Reimbursement__c/listViews/Driver_Safety_Approved_PA_and_Reimb.listView-meta.xml
<ListView>
    <fullName>Driver_Safety_Approved_PA_and_Reimb</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>Assignment__c</columns>
    <columns>Position__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Reimbursement_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Reimbursement_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>contains</operation>
        <value>DS</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved by Program</value>
    </filters>
    <filters>
        <field>Submitted_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2016 12:00 AM</value>
    </filters>
    <label>Driver Safety Approved 2016-- PA &amp; Reimb</label>
    <sharedTo>
        <role>VTM_Manager</role>
    </sharedTo>
</ListView>