force-app/main/default/objects/Reimbursement__c/listViews/Driver_Safety_Approved_Requests.listView-meta.xml
<ListView>
    <fullName>Driver_Safety_Approved_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Volunteer__c</columns>
    <columns>Assignment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Reimbursement_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Reimbursement_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>contains</operation>
        <value>DS</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved by Program,Scheduled for Payment,Pending Finance Approval</value>
    </filters>
    <label>Driver Safety Approved Requests</label>
    <sharedTo>
        <role>VTM_Manager</role>
    </sharedTo>
</ListView>